--- a/css/jeopardy.css
+++ b/css/jeopardy.css
@@ -200,8 +200,7 @@ input.team-name {
     font-size: 1em;
     text-align: center;
 }
-
-/* Additional styles moved from inline HTML */
+/* Upload Controls */
 #upload-controls {
     text-align: center;
     margin: 20px 0;
@@ -210,6 +209,12 @@ input.team-name {
 #upload-controls label {
     color: #111;
     font-size: 18px;
+    margin-bottom: 12px;
+}
+
+#upload-controls input[type="file"] {
+    border: none;
+    padding: 8px;
 }
 
 #add-team {
