--- a/css/jeopardy.css
+++ b/css/jeopardy.css
@@ -138,7 +138,7 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
+    margin: 10px 0;
     width: 100%;
     max-width: 300px;
 }
@@ -195,7 +195,7 @@ textarea {
 #upload-controls h2 {
     text-align: center;
     color: #111;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     font-size: 2em;
 }
 
@@ -616,7 +616,7 @@ input.team-name {
         margin: 10px auto;
     }
     
-    /* Buttons are already stacked by default now */
+    /* Buttons are already stacked by default */
     .option-buttons {
         max-width: 250px;
     }
