changing color of 'add team' button

--- a/css/jeopardy.css
+++ b/css/jeopardy.css
@@ -629,7 +629,7 @@ input.team-name {
 }
 
 #file-add-team {
-    background: #000000;
+    background: #21bd33;
     color: white;
     border: none;
     border-radius: 4px;
