changing button color for adding teams in form

--- a/css/jeopardy.css
+++ b/css/jeopardy.css
@@ -587,7 +587,7 @@ input.team-name {
 }
 
 #form-add-team {
-    background: #111;
+    background: #21bd33;
     color: #fff;
     border: none;
     border-radius: 4px;
